--- a/index.html
+++ b/index.html
@@ -4,49 +4,101 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+  <link rel="stylesheet" href="/css/style.css">
   <link rel="icon" type="image/png" sizes="32x32" href="./assets/favicon-32x32.png">
-  
+
+  <!-- Fonts from Google-Fonts -->
+  <link href="https://fonts.googleapis.com/css2?family=Open+Sans&family=Plus+Jakarta+Sans:wght@400;500;600;700&family=Poppins:wght@400;600&display=swap" rel="stylesheet">
+
+
   <title>Frontend Mentor | Skilled e-learning landing page</title>
 </head>
 <body>
+    <div class="hero-section">
+      <img class="hero" src="/assets/image-hero-desktop.webp" alt="hero picture">
+    </div>
 
-  Get Started
 
-  Maximize skill, minimize budget
+    <div class="container"> 
 
-  Our modern courses across a range of in-demand skills will give you the 
-  knowledge you need to live the life you want.
+      <!-- Header Section with icon-logo and get started button -->
+      <div class="header"> 
+        <img class ="logo" src="/assets/logo-dark.svg" alt="logo icon"> 
+        <a href="#" class="btn--get-started"> Get Started </a>
+      </div>
 
-  Get Started
+      <!-- informations Section with get started button  -->
+      <div class="informations"> 
+          <h2 class="informations__title"> Maximize skill, minimize budget </h2>
+          <p class="informations__details"> 
+            Our modern courses across a range of in-demand skills will give you the knowledge you need to live the life you want.     
+          </p>
+          <a href="#" class="informations__button"> Get Started </a>
+        </div>
 
-  Check out our most popular courses!
+      <div class="specifications"> 
+        <div class="specifications__highlights">
+          <h2 class="specifications__highlights--text">
+            Check out our most popular courses!
+          </h2>
+        </div>
+      
 
-  Animation
-  Learn the latest animation techniques to create stunning motion 
-  design and captivate your audience.
-  Get Started
+        <!-- Animation Card -->
+        <div class="specifications__animation">
+          <h4 class="specifications__animation--title">
+            Animation
+          </h4>
+          <p class="specifications__animation--text">Learn the latest animation techniques to create stunning motion design and captivate your audience.
+          </p>
+          <a class="specifications__animation--link" href="#"> Get Started </a>
+        </div>
 
-  Design
-  Create beautiful, usable interfaces to help shape the future of 
-  how the web looks.
-  Get Started
+        <!-- Design Card -->
+        <div class="specifications__design">
+          <h4 class="specifications__design--title">
+            Design
+          </h4>
+          <p class="specifications__design--text">Create beautiful, usable interfaces to help shape the future of how the web looks.
+          </p>
+          <a class="specifications__design--link" href="#"> Get Started </a>
+        </div>
 
-  Photography
-  Explore critical fundamentals like lighting, composition, and focus 
-  to capture exceptional photos.
-  Get Started
+        <!-- Photography Card -->
+        <div class="specifications__photography">
+          <h4 class="specifications__photography--title">
+            Photography
+          </h4>
+          <p class="specifications__photography--text">Explore critical fundamentals like lighting, composition, and focus to capture exceptional photos.
+          </p>
+          <a class="specifications__photography--link" href="#"> Get Started </a>
+        </div>
 
-  Crypto
-  All you need to know to get started investing in crypto. Go from beginner 
-  to advanced with this 54 hour course.
-  Get Started
+        <!-- Crypto Card -->
+        <div class="specifications__crypto">
+          <h4 class="specifications__crypto--title">
+            Crypto
+          </h4>
+          <p class="specifications__crypto--text">All you need to know to get started investing in crypto. Go from beginner to advanced with this 54 hour course.
+          </p>
+          <a class="specifications__crypto--link" href="#"> Get Started </a>
+        </div>
 
-  Business
-  A step-by-step playbook to help you start, scale, and sustain your business 
-  without outside investment.
-  Get Started
-
-  Get Started
-
+        <!-- Business Card -->
+        <div class="specifications__business">
+          <h4 class="specifications__business--title">
+            Business
+          </h4>
+          <p class="specifications__business--text">A step-by-step playbook to help you start, scale, and sustain your business without outside investment.
+          </p>
+          <a class="specifications__business--link" href="#"> Get Started </a>
+        </div>
+      </div>
+    </div>
+      <div class="footer"> 
+        <img src="/assets/logo-light.svg" alt="Skilled logo">
+        <a href="#" class="btn--get-started"> Get Started </a>
+      
+      </div>
 </body>
 </html>
