Media query : Tablet

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 </head>
 <body>
     <div class="hero-section">
-      <img class="hero" src="/assets/image-hero-desktop.webp" alt="hero picture">
+      <!-- <img class="hero" src="/assets/image-hero-tablet.webp" alt="hero picture"> -->
     </div>
 
 
