--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-  <link rel="stylesheet" href="/css/style.css">
+  <link rel="stylesheet" href="./css/style.css">
   <link rel="icon" type="image/png" sizes="32x32" href="./assets/favicon-32x32.png">
 
   <!-- Fonts from Google-Fonts -->
@@ -23,7 +23,7 @@
 
       <!-- Header Section with icon-logo and get started button -->
       <div class="header"> 
-        <img class ="logo" src="/assets/logo-dark.svg" alt="logo icon"> 
+        <img class ="logo" src="./assets/logo-dark.svg" alt="logo icon"> 
         <a href="#" class="btn--get-started"> Get Started </a>
       </div>
 
@@ -96,7 +96,7 @@
       </div>
     </div>
       <div class="footer"> 
-        <img src="/assets/logo-light.svg" alt="Skilled logo">
+        <img src="./assets/logo-light.svg" alt="Skilled logo">
         <a href="#" class="btn--get-started"> Get Started </a>
       
       </div>
